# Facelet-Analysis-Engine

./: .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  tmp_inspect_llm.py  tmp_run_phase12.py
configs/: config.yaml  logging.yaml  models.yaml  retrieval.yaml  scoring.yaml
data/index/: facet_metadata.json
data/processed/: facets_enriched.csv
evaluation/: conversation_bank.py  generate_report.py  metrics.py  run_confidence_eval.py  run_retrieval_eval.py  run_scoring_eval.py
grounding/: generate_benchmark.py
scripts/: analyze_facets.py
src/backend/: server.py
src/confidence/: confidence_engine.py
src/data_pipeline/: __init__.py  categorizer.py  clean.py  enrich.py
src/evidence/: evidence_extractor.py
src/features/: entity_extractor.py  feature_pipeline.py  sentiment_extractor.py  speaker_detector.py
src/frontend/: app.py
src/knowledge_graph/: __init__.py  graph_builder.py  graph_loader.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  index_builder.py  reranker.py
src/routing/: __init__.py  category_router.py  routing_pipeline.py
src/scoring/: rubric_engine.py  score_pipeline.py
src/utils/: __init__.py  config.py  logger.py  types.py
tests/: test_phase1.py  test_phase12.py  test_phase13-16.py  test_phase17.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6-11.py
tests/data/index/: facet_metadata.json  facets.index
tests/data/knowledge_graph/: facet_graph.json
(+1 files in other folders)
