[project]
name = "ahoum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "jinja2==3.1.4",
    "mypy==1.13.0",
    "networkx==3.4.2",
    "numpy==2.1.3",
    "ollama==0.4.4",
    "orjson==3.10.12",
    "pandas==2.2.3",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "rich==13.9.4",
    "ruff==0.8.4",
    "scikit-learn==1.5.2",
    "sentence-transformers==3.3.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "tqdm==4.67.1",
    "uvicorn[standard]==0.32.1",
]
